--- a/maven-project/pom.xml
+++ b/maven-project/pom.xml
@@ -3,4 +3,18 @@
   <groupId>maven-project</groupId>
   <artifactId>maven-project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  	<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.6.0</version>
+</dependency>
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+</dependency>
+  
+  </dependencies>
 </project>
